[package]
name = "pi-tables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pitables"
crate-type = ["cdylib"]

[dependencies]
itables = { git = "https://github.com/marcelcoding/itables.git" }
pyo3 = { version = "0.17", features = ["extension-module"] }
